--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 
 <head>
@@ -24,7 +24,7 @@
                 <div style="text-align:center;">
                     <div class="polaroid">
                         <div class="logo">
-                            <img src="{{.IMAGE}}" class="img-circle" width="120" height="120" />
+                            <img src="{{.IMAGE}}" class="img-circle" width="120" height="120"  alt=""/>
                         </div>
                     </div>
                     <ul class="breadcrumb" id="ul">
@@ -57,7 +57,6 @@
             <div class="col-md-8 col-md-offset-2">
                 <div class="text-center">
                     <p> Apple OTA </p>
-                    </p>
                 </div>
             </div>
         </div>
